...
        component={LoyaltyStack}
        options={{ title: 'Fidélité' }}
      />
      <Tab.Screen
        name="Account"
        component={AccountStack}
        options={{ title: 'Compte' }}
      />
    </Tab.Navigator>
  )
}

export default MerchantNavigator
...
